added a warning as this will not wrork fast ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ message("flags are : ${LAPACK_LINKER_FLAGS}")
 
 add_executable(lapack lapack.cpp )
 target_include_directories(lapack SYSTEM PRIVATE ${PROJECT_SOURCE_DIR})
+target_link_libraries(lapack ${LAPACK_LIBRARIES})
